--- a/data_mining/getting_web_data.ipynb
+++ b/data_mining/getting_web_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
       "   Google - About Google, Our Culture &amp; Company News\n",
       "  </title>\n",
       "  <meta content=\"Stay up to date with Google company news and products. Discover stories about our culture, philosophy, and how Google technology is impacting others.\" name=\"description\"/>\n",
-      "  <script nonce=\"gFCnwpgVuNX6XioVLzl4Zw\" type=\"text/javascript\">\n",
+      "  <script nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\" type=\"text/javascript\">\n",
       "   window.dataLayer = window.dataLayer || [];\n",
       "window.dataLayer.push({\n",
       "   'gtm.blacklist':['customScripts','nonGoogleScripts','nonGooglePixels','customPixels']\n",
@@ -64,7 +64,7 @@
       "});\n",
       "  </script>\n",
       "  <!-- Google Tag Manager -->\n",
-      "  <script nonce=\"gFCnwpgVuNX6XioVLzl4Zw\">\n",
+      "  <script nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\">\n",
       "   (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':\n",
       "new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],\n",
       "j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=\n",
@@ -72,14 +72,14 @@
       "})(window,document,'script','dataLayer','GTM-WQZB4J');\n",
       "  </script>\n",
       "  <!-- End Google Tag Manager -->\n",
-      "  <script nonce=\"gFCnwpgVuNX6XioVLzl4Zw\">\n",
+      "  <script nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\">\n",
       "   window.dataLayer.push({\n",
       "    event: 'coinToss5050',\n",
       "    action: Math.random() > .5 ? 'group1': 'group2'\n",
       "});\n",
       "  </script>\n",
-      "  <link href=\"//fonts.googleapis.com/css?family=Roboto:100,300,400,500,700|Google+Sans+Text:400,500,700,400i,500i,700i|Google+Sans:400,500|Google+Sans+Display:400|Product+Sans:400&amp;lang=en\" nonce=\"gFCnwpgVuNX6XioVLzl4Zw\" rel=\"stylesheet\"/>\n",
-      "  <link href=\"/assets/css/main.min.css?cache=fb655d0\" nonce=\"gFCnwpgVuNX6XioVLzl4Zw\" rel=\"stylesheet\"/>\n",
+      "  <link href=\"//fonts.googleapis.com/css?family=Roboto:100,300,400,500,700|Google+Sans+Text:400,500,700,400i,500i,700i|Google+Sans:400,500|Google+Sans+Display:400|Product+Sans:400&amp;lang=en\" nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\" rel=\"stylesheet\"/>\n",
+      "  <link href=\"/assets/css/main.min.css?cache=fb655d0\" nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\" rel=\"stylesheet\"/>\n",
       "  <meta content=\"Stay up to date with Google company news and products. Discover stories about our culture, philosophy, and how Google technology is impacting others.\" property=\"og:description\"/>\n",
       "  <meta content=\"Google - About Google, Our Culture &amp; Company News\" property=\"og:title\"/>\n",
       "  <meta content=\"https://lh3.googleusercontent.com/uXVic9jyqJADV4C98TjSkFX-3xxJYedpS2hce6adkNw0t7St_qPHNfhqk6XCUTlF31Pe1v64f0Oc640_0daNO6Ql0UU7_D9yYkz9=w600-l80-sg-rj\" property=\"og:image\"/>\n",
@@ -96,7 +96,7 @@
       "  <link href=\"https://www.gstatic.com/images/branding/googleg/2x/googleg_standard_color_120dp.png\" rel=\"apple-touch-icon\"/>\n",
       "  <link href=\"https://www.gstatic.com/images/branding/googleg/2x/googleg_standard_color_120dp.png\" rel=\"apple-touch-icon-precomposed\"/>\n",
       "  <link href=\"https://about.google/intl/ALL_in/\" rel=\"canonical\"/>\n",
-      "  <script nonce=\"gFCnwpgVuNX6XioVLzl4Zw\">\n",
+      "  <script nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\">\n",
       "   (function(){document.documentElement.classList.remove(\"google\");document.documentElement.classList.add(\"google-js\");}).call(window)\n",
       "  </script>\n",
       " </head>\n",
@@ -1460,7 +1460,7 @@
       "   </span>\n",
       "  </div>\n",
       "  <!--[if gt IE 8]><!-->\n",
-      "  <script id=\"/modal.html\" nonce=\"gFCnwpgVuNX6XioVLzl4Zw\" type=\"text/ng-template\">\n",
+      "  <script id=\"/modal.html\" nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\" type=\"text/ng-template\">\n",
       "   <div class=\"modal-overlay\">\n",
       "    <div data-ui-view=\"modal-content\" class=\"modal-content\"></div>\n",
       "    <button class=\"glue-modal-close\" aria-label=\"close\" data-ng-click=\"modalStateCtrl.closeModal()\">  <svg alt=\"\"  class=\"icon icon-white\" xmlns=\"http://www.w3.org/2000/svg\" width=\"24px\" height=\"24px\" viewBox=\"0 0 24 24\">\n",
@@ -1469,7 +1469,7 @@
       "</button>\n",
       "  </div>\n",
       "  </script>\n",
-      "  <script id=\"/glue/modal/modal-template.html\" nonce=\"gFCnwpgVuNX6XioVLzl4Zw\" type=\"text/ng-template\">\n",
+      "  <script id=\"/glue/modal/modal-template.html\" nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\" type=\"text/ng-template\">\n",
       "   <div>\n",
       "    <div class=\"glue-modal-overlay overlay-animate\" data-glue-show=\"modalCtrl.getModalVisible()\" data-ng-if=\"modalCtrl.getModalVisible()\">\n",
       "      <div class=\"glue-modal\" data-glue-show=\"modalCtrl.getModalVisible()\" role=\"dialog\" tabindex=\"-1\">\n",
@@ -1482,39 +1482,39 @@
       "    </div>\n",
       "  </div>\n",
       "  </script>\n",
-      "  <script nonce=\"gFCnwpgVuNX6XioVLzl4Zw\" src=\"//www.gstatic.com/external_hosted/picturefill/picturefill.min.js\">\n",
+      "  <script nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\" src=\"//www.gstatic.com/external_hosted/picturefill/picturefill.min.js\">\n",
       "  </script>\n",
-      "  <script nonce=\"gFCnwpgVuNX6XioVLzl4Zw\" src=\"//ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js\">\n",
+      "  <script nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\" src=\"//ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js\">\n",
       "  </script>\n",
-      "  <script nonce=\"gFCnwpgVuNX6XioVLzl4Zw\" src=\"//ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-touch.min.js\">\n",
+      "  <script nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\" src=\"//ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-touch.min.js\">\n",
       "  </script>\n",
-      "  <script nonce=\"gFCnwpgVuNX6XioVLzl4Zw\" src=\"//ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-animate.min.js\">\n",
+      "  <script nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\" src=\"//ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-animate.min.js\">\n",
       "  </script>\n",
-      "  <script nonce=\"gFCnwpgVuNX6XioVLzl4Zw\" src=\"//ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-sanitize.min.js\">\n",
+      "  <script nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\" src=\"//ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-sanitize.min.js\">\n",
       "  </script>\n",
-      "  <script nonce=\"gFCnwpgVuNX6XioVLzl4Zw\" src=\"//www.gstatic.com/external_hosted/ng_ui_router/release/angular-ui-router.min.js\">\n",
+      "  <script nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\" src=\"//www.gstatic.com/external_hosted/ng_ui_router/release/angular-ui-router.min.js\">\n",
       "  </script>\n",
-      "  <script nonce=\"gFCnwpgVuNX6XioVLzl4Zw\" src=\"//www.gstatic.com/external_hosted/gsap/v1_18_0/TweenMax.min.js\">\n",
+      "  <script nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\" src=\"//www.gstatic.com/external_hosted/gsap/v1_18_0/TweenMax.min.js\">\n",
       "  </script>\n",
-      "  <script nonce=\"gFCnwpgVuNX6XioVLzl4Zw\" src=\"//www.gstatic.com/external_hosted/gsap/v1_18_0/plugins/ScrollToPlugin.min.js\">\n",
+      "  <script nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\" src=\"//www.gstatic.com/external_hosted/gsap/v1_18_0/plugins/ScrollToPlugin.min.js\">\n",
       "  </script>\n",
-      "  <script nonce=\"gFCnwpgVuNX6XioVLzl4Zw\" src=\"//www.gstatic.com/external_hosted/scrollmagic/ScrollMagic.min.js\">\n",
+      "  <script nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\" src=\"//www.gstatic.com/external_hosted/scrollmagic/ScrollMagic.min.js\">\n",
       "  </script>\n",
-      "  <script nonce=\"gFCnwpgVuNX6XioVLzl4Zw\" src=\"//www.gstatic.com/external_hosted/scrollmagic/animation.gsap.min.js\">\n",
+      "  <script nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\" src=\"//www.gstatic.com/external_hosted/scrollmagic/animation.gsap.min.js\">\n",
       "  </script>\n",
-      "  <script nonce=\"gFCnwpgVuNX6XioVLzl4Zw\" src=\"//www.gstatic.com/external_hosted/intersectionobserver_polyfill/intersection-observer.min.js\">\n",
+      "  <script nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\" src=\"//www.gstatic.com/external_hosted/intersectionobserver_polyfill/intersection-observer.min.js\">\n",
       "  </script>\n",
-      "  <script nonce=\"gFCnwpgVuNX6XioVLzl4Zw\" src=\"//www.gstatic.com/external_hosted/pixi/pixi.min.js\">\n",
+      "  <script nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\" src=\"//www.gstatic.com/external_hosted/pixi/pixi.min.js\">\n",
       "  </script>\n",
-      "  <script nonce=\"gFCnwpgVuNX6XioVLzl4Zw\" src=\"//www.google.com/jsapi\">\n",
+      "  <script nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\" src=\"//www.google.com/jsapi\">\n",
       "  </script>\n",
-      "  <script nonce=\"gFCnwpgVuNX6XioVLzl4Zw\" src=\"//www.gstatic.com/feedback/js/help/prod/service/lazy.min.js\">\n",
+      "  <script nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\" src=\"//www.gstatic.com/feedback/js/help/prod/service/lazy.min.js\">\n",
       "  </script>\n",
-      "  <script nonce=\"gFCnwpgVuNX6XioVLzl4Zw\" src=\"/assets/js/main.min.js?cache=4bc31b2\">\n",
+      "  <script nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\" src=\"/assets/js/main.min.js?cache=4bc31b2\">\n",
       "  </script>\n",
-      "  <script nonce=\"gFCnwpgVuNX6XioVLzl4Zw\" src=\"/assets/js/detect.min.js?cache=c84f19a\">\n",
+      "  <script nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\" src=\"/assets/js/detect.min.js?cache=c84f19a\">\n",
       "  </script>\n",
-      "  <script data-autoload-cookie-consent-bar=\"true\" data-autoload-cookie-consent-bar-intl-code=\"\" nonce=\"gFCnwpgVuNX6XioVLzl4Zw\" src=\"https://www.gstatic.com/brandstudio/kato/cookie_choice_component/cookie_consent_bar.v3.js\">\n",
+      "  <script data-autoload-cookie-consent-bar=\"true\" data-autoload-cookie-consent-bar-intl-code=\"\" nonce=\"Tk0MJNIvqKfKj2RZ3Le4Rw\" src=\"https://www.gstatic.com/brandstudio/kato/cookie_choice_component/cookie_consent_bar.v3.js\">\n",
       "  </script>\n",
       "  <!--<![endif]-->\n",
       " </body>\n",
@@ -1525,6 +1525,59 @@
    "source": [
     "soup = BeautifulSoup(web_page.content)\n",
     "print(soup.prettify())#print the html code for testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<h1>Our mission is to <span class=\"blue\">organise</span> the world’s <span class=\"red\">information</span> and make it <span class=\"green\">universally accessible</span> and <span class=\"yellow\">useful</span>.</h1>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find(\"h1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<img alt=\"Open navigation menu\" class=\"menu-bars\" height=\"24\" src=\"/assets/img/menu.png?cache=38c6aed\" width=\"24\"/>,\n",
+       " <img alt=\"Close navigation menu\" class=\"menu-close\" height=\"24\" src=\"/assets/img/close.png?cache=5628868\" width=\"24\"/>,\n",
+       " <img class=\"{[::feed.type]}\" data-ng-src=\"/assets/img/{[feed.image_generic]}\"/>,\n",
+       " <img class=\"{[::feed.type]} backup-image\" data-ng-src=\"/assets/img/blog-fallback-3.svg\"/>,\n",
+       " <img alt=\"\" class=\"icon icon-logo\" data-ng-src=\"/assets/img/social-{[::feed.icon]}-color.svg\"/>,\n",
+       " <img class=\"{[::feed.type]}\" data-ng-src=\"/assets/img/{[feed.image_generic]}\"/>,\n",
+       " <img class=\"{[::feed.type]} backup-image\" data-ng-src=\"/assets/img/blog-fallback-3.svg\"/>,\n",
+       " <img alt=\"\" class=\"icon icon-logo\" data-ng-src=\"/assets/img/social-{[::feed.icon]}-color.svg\"/>,\n",
+       " <img alt=\"Previous\" src=\"/assets/img/keyboard-arrow-up-999.svg?cache=911336e\"/>,\n",
+       " <img alt=\"Next\" src=\"/assets/img/keyboard-arrow-up-999.svg?cache=911336e\"/>,\n",
+       " <img class=\"img lazy-img\" data-lazy-img-carousel=\"\" data-lazy-img-delay=\"\" data-lazy-src-bind=\"{[::doodle.high_res_url]}\" data-lazy-threshold=\"100vh\"/>,\n",
+       " <img alt=\"Previous\" src=\"/assets/img/keyboard-arrow-up-999.svg?cache=911336e\"/>,\n",
+       " <img alt=\"Next\" src=\"/assets/img/keyboard-arrow-up-999.svg?cache=911336e\"/>,\n",
+       " <img class=\"img lazy-img\" data-lazy-src-bind=\"{[::doodleCtrl.doodleHistory[0].high_res_url]}\" data-lazy-threshold=\"100vh\"/>]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find_all(\"img\")"
    ]
   },
   {
